--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
                 </ul>
         </nav>
         
+<header>
+        <h1>About me</h1>
+</header>
 
+<section id="content">
+        <article>
+             <p> I (Dzhyldyz) know that I am </p>   
+        </article>
+</section>
 
 <h1>Europass Curriculum Vitae </h1>
 <h1>First name(s) / Surname(s) <strong>Dzhyldyz Takyrbasheva </strong></h1>
